# sn360-desktop-agent

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  LICENSE  Makefile  PROGRESS.md  README.md  SECURITY.md  TEST_RESULTS.md  benchmark-results.md  deny.toml  device-agent-proposal.md  security-e2e-results.txt
configs/: profile-advanced.yaml  profile-basic.yaml  profile-standard.yaml
crates/sda-active-response/: Cargo.toml
crates/sda-active-response/src/: executor.rs  lib.rs
crates/sda-active-response/src/actions/: disable_account.rs  firewall_drop.rs  kill_process.rs  mod.rs
crates/sda-agent/: Cargo.toml
crates/sda-agent-vitals/: Cargo.toml
crates/sda-agent-vitals/src/: collector.rs  heartbeat.rs  lib.rs  module.rs
crates/sda-agent/src/: main.rs  privilege.rs  tamper.rs
crates/sda-agent/tests/: e2e_app_control.rs  e2e_device_control.rs  e2e_device_policy.rs  e2e_dlp.rs  e2e_host_isolation.rs  e2e_identity.rs  e2e_jit_admin.rs  e2e_lde_hotreload.rs  e2e_management_compat.rs  e2e_mdm.rs  e2e_mdm_actions.rs  e2e_mdm_profile.rs  e2e_memory_scan.rs  e2e_network_telemetry.rs  e2e_process_telemetry.rs  e2e_remote_support.rs  e2e_software.rs
crates/sda-app-control/: Cargo.toml
crates/sda-app-control/src/: enforce.rs  lib.rs  linux.rs  module.rs  monitor.rs  policy.rs  wdac.rs
crates/sda-comms/: Cargo.toml
crates/sda-comms/src/: blowfish_wazuh.rs  connection.rs  crypto.rs  enrollment.rs  keepalive.rs  lib.rs  msgpack.rs  protocol.rs
crates/sda-comms/src/transport/: http2.rs  mod.rs  tls.rs
crates/sda-core/: Cargo.toml
crates/sda-core/src/: agent.rs  config.rs  lib.rs  location.rs  module.rs  power.rs  signal.rs  time.rs
crates/sda-device-control/: Cargo.toml
crates/sda-device-control/src/: action_result.rs  canonicalize.rs  evidence.rs  finding.rs  lib.rs  recommendation.rs  router.rs  signed_job.rs  types.rs  usb_ipc.rs  usb_linux.rs  usb_macos.rs  usb_module.rs  usb_policy.rs  usb_supervisor.rs  usb_windows.rs  version.rs  windows.rs
crates/sda-device-control/tests/: wire_format_compat.rs
crates/sda-dlp/: Cargo.toml
crates/sda-dlp/src/: clipboard.rs  lib.rs  patterns.rs  scanner.rs
crates/sda-dlp/src/patterns/: asia.rs  europe.rs  gcc.rs  global.rs  mod.rs  validators.rs
crates/sda-enhanced-inventory/: Cargo.toml
crates/sda-enhanced-inventory/src/: browser_extensions.rs  lib.rs  running_software.rs  sbom.rs
crates/sda-enhanced-inventory/tests/: browser_extensions_integration.rs  sbom_integration.rs
crates/sda-event-bus/: Cargo.toml
crates/sda-event-bus/src/: bus.rs  event.rs  lib.rs
crates/sda-fim/: Cargo.toml
crates/sda-fim/examples/: burst_watcher.rs
crates/sda-fim/src/: batcher.rs  config.rs  db.rs  debounce.rs  event_format.rs  hasher.rs  idle.rs  lib.rs  rate_limiter.rs  scanner.rs  watcher.rs
crates/sda-fim/tests/: baseline_scan_integration.rs  burst_workload.rs  fim_integration.rs  integration.rs
crates/sda-host-isolation/: Cargo.toml
crates/sda-host-isolation/src/: lib.rs
crates/sda-identity-monitor/: Cargo.toml
crates/sda-identity-monitor/src/: lib.rs  linux.rs  macos.rs  windows.rs
crates/sda-inventory/: Cargo.toml
crates/sda-inventory/src/: hardware.rs  lib.rs  network.rs  os_info.rs  packages.rs  syscollector_format.rs
crates/sda-jit-admin/: Cargo.toml
crates/sda-jit-admin/src/: drift.rs  grant.rs  lib.rs  module.rs  state_machine.rs  store.rs  watchdog.rs
crates/sda-local-detection/: Cargo.toml
crates/sda-local-detection/src/: behavioral.rs  default_bundle.rs  ioc_matcher.rs  lib.rs  offline_queue.rs  response.rs  rule_store.rs  trds_client.rs  yara_scanner.rs
crates/sda-logcollector/: Cargo.toml  build.rs
crates/sda-logcollector/src/: batch.rs  file_reader.rs  journal_reader.rs  lib.rs  oslog_reader.rs  state.rs  windows_eventlog.rs  windows_eventlog_parser.rs
crates/sda-management-compat/: Cargo.toml
crates/sda-management-compat/src/: fleet_yaml.rs  lib.rs  translator.rs
crates/sda-mdm/: Cargo.toml
crates/sda-mdm/src/: auto_remediate.rs  config_profile.rs  lib.rs  lock.rs  lost_mode.rs  module.rs  os_patch.rs  recovery_key.rs  wipe.rs
crates/sda-memory-scanner/: Cargo.toml
crates/sda-memory-scanner/src/: amsi.rs  amsi_mock.rs  lib.rs
crates/sda-pal/: Cargo.toml
crates/sda-pal/src/: admin_manager.rs  app_control.rs  dns_monitor.rs  fs_watcher.rs  host_isolation.rs  lib.rs  mdm.rs  memory_scanner.rs  network_monitor.rs  package_manager.rs  posture.rs  power.rs  process_monitor.rs  remote_support.rs  sysinfo.rs  types.rs
crates/sda-pal/src/kernel/: linux_ebpf.rs  macos.rs  mod.rs  windows.rs
crates/sda-posture/: Cargo.toml
crates/sda-posture/src/: lib.rs  snapshot.rs
crates/sda-query/: Cargo.toml
crates/sda-query/src/: client.rs  lib.rs  scheduler.rs  sidecar.rs
crates/sda-remote-support/: Cargo.toml
crates/sda-remote-support/src/: consent.rs  lib.rs  module.rs  protocol.rs  session.rs
crates/sda-rootcheck/: Cargo.toml
crates/sda-rootcheck/src/: binary_integrity.rs  content_checks.rs  hidden_process.rs  lib.rs  signatures.rs
crates/sda-sca/: Cargo.toml
crates/sda-sca/policies/: basic_security.yaml
crates/sda-sca/src/: lib.rs
crates/sda-software/: Cargo.toml
crates/sda-software/src/: approval.rs  catalogue.rs  evidence.rs  lib.rs  manifest.rs  module.rs  rollback.rs
crates/sda-updater/: Cargo.toml
crates/sda-updater/src/: checker.rs  installer.rs  lib.rs
crates/sda-updater/tests/: checker_http.rs
docs/: admin-guide.md  agent-shared-patterns.md  architecture.md  benchmarks.md  configuration-reference.md  desktop-mdm.md  device-control.md  edr.md  feature-profiles.md  integration.md  kernel-drivers.md  licensing.md  msp-deployment.md  platform-testing.md  proprietary-licensing-rationale.md  release-process.md  revised-phase-plan.md  security-audit.md  security.md  user-guide.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: msgpack_event_decode.rs  protocol_decode.rs  protocol_decompress.rs  rule_store_msgpack.rs
packaging/: README.md
tests/: README.md  docker-compose-v4.7.yml  docker-compose.yml  sda-test-config-macos.yaml  (+2 more)
(+63 files in other folders)
