[package]
name = "sda-active-response"
description = "Active response execution module for SDA"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
sda-event-bus = { workspace = true }
sda-core = { workspace = true }
tokio = { workspace = true, features = ["process", "time", "sync", "macros"] }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
async-trait = "0.1"

[target.'cfg(unix)'.dependencies]
nix = { workspace = true }
libc = "0.2"

[dev-dependencies]
tempfile = "3"
