[package]
name = "sda-agent"
description = "Binary entry point for SN360 Desktop Agent"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "sda-agent"
path = "src/main.rs"

[features]
# The default build ships the legacy SIEM (Wazuh-compatible)
# transport adapter alongside the SN360 native-protocol building
# blocks. A proprietary-only distribution can compile the legacy
# adapter out with `--no-default-features`; see
# `docs/proprietary-licensing-rationale.md` for the rationale.
default = ["legacy-siem"]

# Forwarded to `sda-comms/legacy-siem` so the enrolment, connection,
# crypto, protocol, and keepalive modules are compiled in.
legacy-siem = ["sda-comms/legacy-siem"]

[dependencies]
sda-core = { workspace = true }
sda-comms = { workspace = true, default-features = false }
sda-event-bus = { workspace = true }
sda-pal = { workspace = true }
sda-fim = { workspace = true }
sda-logcollector = { workspace = true, features = ["linux-journal"] }
sda-inventory = { workspace = true }
sda-sca = { workspace = true }
sda-active-response = { workspace = true }
sda-rootcheck = { workspace = true }
sda-local-detection = { workspace = true }
sda-process-monitor = { workspace = true }
sda-network-monitor = { workspace = true }
sda-memory-scanner = { workspace = true }
sda-identity-monitor = { workspace = true }
sda-dlp = { workspace = true }
sda-host-isolation = { workspace = true }
sda-enhanced-inventory = { workspace = true }
sda-updater = { workspace = true }
sda-device-control = { workspace = true }
sda-query = { workspace = true }
sda-posture = { workspace = true }
sda-software = { workspace = true }
sda-script-runner = { workspace = true }
sda-jit-admin = { workspace = true }
sda-agent-vitals = { workspace = true }
sda-remote-support = { workspace = true }
sda-app-control = { workspace = true }
sda-mdm = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
gethostname = { workspace = true }
sha2 = { workspace = true }
uuid = { workspace = true }

[target.'cfg(unix)'.dependencies]
nix = { workspace = true }
libc = "0.2"

[dev-dependencies]
tempfile = "3"
chrono = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }
ed25519-dalek = { workspace = true, features = ["rand_core"] }
rand_core = { version = "0.6", features = ["getrandom"] }
hex = { workspace = true }
base64 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
sda-management-compat = { workspace = true }
# Re-list the three EDR module crates here so the E2E tests can
# pull in their `test-support` feature gate. Cargo unifies these
# entries with the corresponding entries in `[dependencies]`; the
# normal-build path stays feature-clean (no test-support code in
# the release binary).
sda-identity-monitor = { workspace = true, features = ["test-support"] }
sda-dlp = { workspace = true, features = ["test-support"] }
sda-memory-scanner = { workspace = true, features = ["test-support"] }
# `sda-pal` is already listed under `[dependencies]` — duplicating
# it here was a copy-paste artefact flagged by the Devin Review
# bot. Cargo would tolerate it, but it adds noise to the manifest.
