[package]
name = "sda-enhanced-inventory"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
sda-core = { workspace = true }
sda-event-bus = { workspace = true }
sda-pal = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }

[target.'cfg(unix)'.dependencies]
nix = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows = { workspace = true, features = [
    "Win32_Foundation",
    "Win32_System_Diagnostics_ToolHelp",
] }
