[package]
name = "sda-identity-monitor"
description = "Identity-attack detection module (Phase E5 of EDR Parity) for SDA"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
# Exposes the in-process mock `IdentityProvider` so the E5 E2E
# tests in `sda-agent` can construct one without enabling `cfg(test)`.
test-support = []

[dependencies]
sda-core = { workspace = true }
sda-event-bus = { workspace = true }
sda-pal = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "test-util"] }
