[package]
name = "sda-inventory"
description = "System inventory collection module for SDA"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
sda-event-bus = { workspace = true }
sda-core = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
[target.'cfg(unix)'.dependencies]
nix = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
tempfile = "3"
