[package]
name = "sda-memory-scanner"
description = "Memory scanning + fileless detection module (Phase E4 of EDR Parity) for SDA"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
# AMSI integration for Windows PowerShell / VBScript content scanning.
# Off by default; consumers opt in via `--features amsi`.
amsi = []

[dependencies]
sda-core = { workspace = true }
sda-event-bus = { workspace = true }
sda-pal = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "test-util"] }
