[package]
name = "sda-pal"
description = "Platform Abstraction Layer for SDA - cross-platform OS interfaces"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
notify = { workspace = true }
chrono = { workspace = true }
gethostname = { workspace = true }
tempfile = { workspace = true }
# Used by app_control.rs for Ed25519-signed policy bundle verification
# (Phase 4 Task 4.4). hex is the canonical encoding for the
# signed-payload + signature + public-key fields in
# `SignedAppControlPolicy`.
ed25519-dalek = { workspace = true }
hex = { workspace = true }
# Used by mdm.rs for SHA-256 hashing of update logs and AEAD
# encryption of recovery key payloads.
ring = { workspace = true }
uuid = { workspace = true }
sha2 = { workspace = true }
# Used by host_isolation.rs to parse and normalize allow-list CIDRs
# (Phase E3.10 of the EDR Parity workstream).
ipnet = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
nix = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10"
core-foundation-sys = "0.8"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Power",
    "Win32_System_SystemInformation",
    "Win32_UI_Input_KeyboardAndMouse",
] }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tempfile = "3"
