[package]
name = "sda-posture"
description = "Periodic device-posture snapshot module for SDA Device Control (Phase 1)"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
sda-core = { workspace = true }
sda-event-bus = { workspace = true }
sda-pal = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "test-util"] }
