[package]
name = "sda-query"
description = "osquery sidecar wrapper for SDA Device Control (Phase 1 MVP)"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
sda-core = { workspace = true }
sda-event-bus = { workspace = true }
tokio = { workspace = true, features = ["process"] }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["rt-multi-thread", "test-util"] }
