[package]
name = "sda-sca"
description = "Security Configuration Assessment module for SDA"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
sda-event-bus = { workspace = true }
sda-core = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
regex = "1.12.3"
